--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ header {
   display: grid;
   grid-template-columns: 5% 20% 35% 40% ;
   grid-template-rows: auto;
-  background: url(/resources/img/platter.jpg);
+  background: url(platter.jpg);
   background-size: cover;
   background-position: center;
   color: rgb(255, 255, 255);
@@ -181,19 +181,19 @@ header p {
 
 .gericht1 {
   grid-area: 3/2/span 2/span 1;
-  background: url(/resources/img/restaurant.jpg);
+  background: url(restaurant.jpg);
   background-size: cover ;
 }
 
 .gericht2 {
   grid-area: 3/3/span 2/span 1;
-  background: url(/resources/img/food.jpg);
+  background: url(food.jpg);
   background-size: cover ;
 }
 
 .gericht3 {
   grid-area: 3/4/span 2/span 1;
-  background: url(/resources/img/tofu.jpg);
+  background: url(tofu.jpg);
   background-size: cover ;
 }
 
@@ -333,11 +333,6 @@ header p {
 
 .über-uns-fig2 figcaption {
   grid-area: 1/2/3/4;
-}
-
-.über-uns-fig2 p {
-  grid-area: 2/2/span 1/4;
-
 }
 
 
