--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ header {
   display: grid;
   grid-template-columns: 5% 20% 35% 40% ;
   grid-template-rows: auto;
-  background: url(platter.jpg);
+  background: url("platter.jpg");
   background-size: cover;
   background-position: center;
   color: rgb(255, 255, 255);
@@ -181,19 +181,19 @@ header p {
 
 .gericht1 {
   grid-area: 3/2/span 2/span 1;
-  background: url(restaurant.jpg);
+  background: url("restaurant.jpg");
   background-size: cover ;
 }
 
 .gericht2 {
   grid-area: 3/3/span 2/span 1;
-  background: url(food.jpg);
+  background: url("food.jpg");
   background-size: cover ;
 }
 
 .gericht3 {
   grid-area: 3/4/span 2/span 1;
-  background: url(tofu.jpg);
+  background: url("tofu.jpg");
   background-size: cover ;
 }
 
